--- a/css/style.css
+++ b/css/style.css
@@ -5,14 +5,14 @@ label {
   font-weight: normal; }
 
 .btn {
-  background-color: #f44e21;
-  border-color: #f44e21;
+  background-color: #dd370a;
+  border-color: #dd370a;
   text-transform: uppercase;
   font-weight: normal;
   color: #ffffff; }
   .btn:hover, .btn:focus, .btn:active, .btn:focus:active {
-    background-color: #d7360b;
-    border-color: #d7360b;
+    background-color: #ac2b08;
+    border-color: #ac2b08;
     color: #ffffff; }
   .btn.btn-default {
     background-color: #ffffff;
@@ -44,25 +44,19 @@ label {
     padding: 48px 60px;
     border-radius: 0; }
   .header h1 {
-    margin-top: 140px;
+    margin-top: 0;
+    font-size: 3vw;
     transition: .2s all ease; }
-  .header.affix {
-    padding: 15px 30px 10px;
-    width: 100%;
-    z-index: 50;
-    top: 80px; }
-    .header.affix h1 {
-      margin-top: 0;
-      font-size: 28px; }
-    .header.affix + .content {
-      padding-top: 315px; }
 
 .intro {
   display: flex;
   align-items: center; }
+  .intro .lead::first-line {
+    font-size: 125%;
+    line-height: 2; }
 
 .feature-icon {
-  font-size: 16vw;
+  font-size: 4vw;
   text-align: center;
   color: #cccccc; }
 
@@ -70,6 +64,9 @@ hr.thick {
   border-top-width: 2px;
   border-top-color: #cccccc;
   margin: 60px 0; }
+
+h1 small, h2 small, h3 small, h4 small, h5 small, h6 small {
+  color: #767676; }
 
 .sitback-header {
   position: fixed;
@@ -81,7 +78,7 @@ hr.thick {
   position: relative;
   width: 100%;
   padding: 2px 10px 5px;
-  background-color: #f44e21;
+  background-color: #dd370a;
   text-align: right;
   font-size: 10px;
   color: #ffffff; }
@@ -125,27 +122,31 @@ hr.thick {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  align-items: center;
-  min-height: 173px;
-  padding: 20px 30px 30px;
-  background-color: #333333;
+  align-items: flex-end;
+  padding: 10px 30px;
+  background-color: #040404;
   color: #ffffff;
   font-size: 16px;
   line-height: 1.8em; }
+  .footer > div {
+    align-self: bottom; }
+  .footer a {
+    color: #dd370a; }
+
+.address {
+  order: 1; }
 
 .copyright {
-  flex: 2 2 100%;
-  margin-top: 50px;
-  border-bottom: 1px solid #444444;
-  font-weight: 300; }
+  margin-top: 20px;
+  font-weight: 300;
+  order: 2; }
 
 .contact {
-  margin-top: 40px; }
+  margin-top: 20px;
+  order: 3; }
   .contact img {
     height: 16px;
     padding-right: 10px; }
-  .contact a {
-    color: #f44e21; }
 
 .sidebar {
   position: absolute;
@@ -157,7 +158,7 @@ hr.thick {
   background-color: #f6f6f6;
   border-right: 1px solid #cccccc; }
   .sidebar.affix-top {
-    padding-top: 40px; }
+    padding-top: 0px; }
   .sidebar.affix {
     position: fixed; }
 
@@ -199,7 +200,7 @@ input.upload {
       vertical-align: baseline; }
   .checkbox input:checked + label::before {
     content: '\e067';
-    color: #f44e21; }
+    color: #dd370a; }
 
 .bg-position-list {
   list-style: none;
@@ -223,7 +224,7 @@ input.upload {
   .bg-position-item input {
     display: none; }
     .bg-position-item input:checked + label {
-      background-color: #f44e21;
+      background-color: #dd370a;
       color: #ffffff; }
 
 .arrow-rotate-45 {
@@ -466,7 +467,7 @@ input.upload {
     left: 50%;
     transform: translate(-50%, 0);
     border-radius: 10px 5px 40px 40px;
-    box-shadow: 0 10px 6px -7px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 10px 6px -7px rgba(4, 4, 4, 0.5);
     background-color: #cccccc;
     background: linear-gradient(to bottom, #dddddd 0%, #dddddd 74%, #b0b0b0 75%, #b0b0b0 100%); }
   .small-desktop .device-screen {
@@ -518,7 +519,7 @@ input.upload {
     height: 20px;
     background-color: #444444;
     content: '';
-    box-shadow: 0 8px 0 -4px #000000; }
+    box-shadow: 0 8px 0 -4px #040404; }
   .hdtv .device-screen {
     width: 1920px;
     height: 1080px;
