--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -1,6 +1,6 @@
 
 // Colours
-$pomegranate:     #f44e21;
+//$pomegranate:     #f44e21;
 $white:           #ffffff;
 $wild-sand:       #f6f6f6;
 $gallery:         #eeeeee;
@@ -10,6 +10,10 @@ $silver-chalice:  #b0b0b0;
 $tundora:         #444444;
 $mine-shaft:      #333333;
 $black:           #000000;
+$boulder:         #767676;
+$black:           #040404;
+$trinidad:        #dd370a;
+$pomegranate:     $trinidad;
 
 // Bootstrap Overrides
 body {
@@ -78,34 +82,27 @@ label {
   }
 
   h1 {
-    margin-top: 140px;
+    margin-top: 0;
+    font-size: 3vw;
     transition: .2s all ease;
-  }
-
-  &.affix {
-    padding: 15px 30px 10px;
-    width: 100%;
-    z-index: 50;
-    top: 80px;
-
-    h1 {
-      margin-top: 0;
-      font-size: 28px;
-    }
-
-    & + .content {
-      padding-top: 315px;
-    }
   }
 }
 
 .intro {
   display: flex;
   align-items: center;
+
+  .lead {
+
+    &::first-line {
+      font-size: 125%;
+      line-height: 2;
+    }
+  }
 }
 
 .feature-icon {
-  font-size: 16vw;
+  font-size: 4vw;
   text-align: center;
   color: $silver;
 }
@@ -115,5 +112,12 @@ hr {
     border-top-width: 2px;
     border-top-color: $silver;
     margin: 60px 0;
+  }
+}
+
+h1, h2, h3, h4, h5, h6 {
+
+  small {
+    color: $boulder;
   }
 }
