--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -121,3 +121,23 @@ h1, h2, h3, h4, h5, h6 {
     color: $boulder;
   }
 }
+
+.block {
+  display: block;
+}
+
+.center {
+  text-align: center;
+} 
+
+.strong {
+  font-weight: bold;
+} 
+
+.margin-top_1 {
+  margin-top: 1em;
+} 
+
+.margin-bottom_1 {
+  margin-bottom: 1em;
+}
