--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,6 +4,7 @@
 @import 'sitback-header';
 @import 'sitback-footer';
 @import 'sidebar';
+@import 'history';
 @import 'devices';
 @import 'devices/iphone';
 @import 'devices/galaxy-s7';
