--- a/css/style.css
+++ b/css/style.css
@@ -46,19 +46,28 @@ label {
   .header h1 {
     margin-top: 0;
     font-size: 3vw;
+    line-height: 1;
     transition: .2s all ease; }
 
 .intro {
   display: flex;
-  align-items: center; }
+  align-items: stretch; }
   .intro .lead::first-line {
     font-size: 125%;
     line-height: 2; }
+  .intro .start-box {
+    background-color: #eeeeee; }
+    .intro .start-box .start-button-wrapper {
+      text-align: center; }
+    .intro .start-box .btn {
+      margin-bottom: 0.5em;
+      cursor: pointer; }
 
 .feature-icon {
   font-size: 4vw;
   text-align: center;
-  color: #cccccc; }
+  color: #cccccc;
+  vertical-align: text-top; }
 
 hr.thick {
   border-top-width: 2px;
@@ -94,13 +103,35 @@ h1 small, h2 small, h3 small, h4 small, h5 small, h6 small {
   background: #333333;
   background: rgba(51, 51, 51, 0.95);
   border-radius: 0;
-  min-height: 60px; }
+  min-height: 60px;
+  padding-top: 0.8em;
+  padding-left: 1em; }
+  .navbar h1 {
+    color: #ffffff;
+    font-size: 20px;
+    float: left;
+    padding: 0;
+    margin: 0;
+    text-transform: uppercase;
+    font-weight: lighter;
+    letter-spacing: 0.015em;
+    line-height: 40px; }
+  .navbar .by {
+    float: left;
+    display: inline-block;
+    color: #ffffff;
+    line-height: 45px;
+    text-transform: uppercase;
+    font-weight: lighter;
+    padding: 0 0.5em; }
 
 .logo {
   width: 255px;
   height: 27px;
   display: block;
-  padding: 15px 15px 15px; }
+  line-height: 26px;
+  float: left;
+  padding: 0; }
   .logo img {
     max-width: 255px;
     height: 27px; }
