--- a/scss/_sitback-header.scss
+++ b/scss/_sitback-header.scss
@@ -34,13 +34,40 @@
   background: rgba($mine-shaft, 0.95);
   border-radius: 0;
   min-height: 60px;
+  padding-top: 0.8em;
+  padding-left: 1em;
+
+  h1 {
+    color: $white;
+    font-size: 20px;
+    float: left;
+    padding: 0;
+    margin: 0;
+    text-transform: uppercase;
+    font-weight: lighter;
+    letter-spacing: 0.015em;
+    line-height: 40px;
+  }
+
+  .by {
+    float: left;
+    display: inline-block;
+    color: $white;
+    line-height: 45px;
+    text-transform: uppercase;
+    font-weight: lighter;
+    padding: 0 0.5em;
+  }
 }
 
 .logo {
   width: 255px;
   height: 27px;
   display: block;
-  padding: 15px 15px 15px;
+  line-height: 26px;
+  float: left;
+  padding: 0;
+//  padding: 15px 15px 15px;
 
   img {
     max-width: 255px;
