--- a/css/style.css
+++ b/css/style.css
@@ -5,14 +5,14 @@ label {
   font-weight: normal; }
 
 .btn {
-  background-color: #dd370a;
-  border-color: #dd370a;
+  background-color: #d6252f;
+  border-color: #d6252f;
   text-transform: uppercase;
   font-weight: normal;
   color: #ffffff; }
   .btn:hover, .btn:focus, .btn:active, .btn:focus:active {
-    background-color: #ac2b08;
-    border-color: #ac2b08;
+    background-color: #ab1d25;
+    border-color: #ab1d25;
     color: #ffffff; }
   .btn.btn-default {
     background-color: #ffffff;
@@ -87,7 +87,7 @@ h1 small, h2 small, h3 small, h4 small, h5 small, h6 small {
   position: relative;
   width: 100%;
   padding: 2px 10px 5px;
-  background-color: #dd370a;
+  background-color: #d6252f;
   text-align: right;
   font-size: 10px;
   color: #ffffff; }
@@ -155,14 +155,14 @@ h1 small, h2 small, h3 small, h4 small, h5 small, h6 small {
   justify-content: space-between;
   align-items: flex-end;
   padding: 10px 30px;
-  background-color: #040404;
+  background-color: #d6252f;
   color: #ffffff;
   font-size: 16px;
   line-height: 1.8em; }
   .footer > div {
     align-self: bottom; }
   .footer a {
-    color: #dd370a; }
+    color: #ffffff; }
 
 .address {
   order: 1; }
@@ -231,7 +231,7 @@ input.upload {
       vertical-align: baseline; }
   .checkbox input:checked + label::before {
     content: '\e067';
-    color: #dd370a; }
+    color: #d6252f; }
 
 .bg-position-list {
   list-style: none;
@@ -255,7 +255,7 @@ input.upload {
   .bg-position-item input {
     display: none; }
     .bg-position-item input:checked + label {
-      background-color: #dd370a;
+      background-color: #d6252f;
       color: #ffffff; }
 
 .arrow-rotate-45 {
