--- a/scss/_sitback-footer.scss
+++ b/scss/_sitback-footer.scss
@@ -6,7 +6,7 @@
   justify-content: space-between;
   align-items: flex-end;
   padding: 10px 30px;
-  background-color: $black;
+  background-color: $alizarin-crimson;
   color: $white;
   font-size: 16px;
   line-height: 1.8em;
@@ -16,7 +16,7 @@
   }
 
   a {
-    color: $pomegranate;
+    color: $white;
   }
 }
 
