--- a/scss/_sitback-header.scss
+++ b/scss/_sitback-header.scss
@@ -11,7 +11,7 @@
   position: relative;
   width: 100%;
   padding: 2px 10px 5px;
-  background-color: $pomegranate;
+  background-color: $alizarin-crimson;
   text-align: right;
   font-size: 10px;
   color: $white;
