--- a/scss/devices/_hdtv.scss
+++ b/scss/devices/_hdtv.scss
@@ -10,7 +10,8 @@ $hdtv-height: 1080px;
   height: $hdtv-height + 100px; // 900px + top and bottom border width
   border-width: 50px;
   border-radius: 0;
-  transform: scale(0.6) translate(-25%, -32%);
+  //transform: scale(0.6) translate(-25%, -32%);
+  transform: scale(0.56) translate(-39%, -40%);
 
   // Stand
   &::before {
