--- a/scss/base/_structure.scss
+++ b/scss/base/_structure.scss
@@ -37,5 +37,9 @@ body {
 }
 
 .content-wrapper {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  padding-top: 75px;
   padding-right: 250px;
 }
