--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,11 @@
+html {
+  height: 100%; }
+
 body {
-  position: relative; }
+  position: relative;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column; }
 
 label {
   font-weight: normal; }
@@ -182,11 +188,11 @@ h1 small, h2 small, h3 small, h4 small, h5 small, h6 small {
 .sidebar {
   position: absolute;
   top: 78px;
-  height: calc(100% - 83px);
+  height: calc(100vh - 78px);
   width: 250px;
   right: 0;
   padding: 0 20px;
-  overflow-y: scroll;
+  overflow: scroll;
   background-color: #ffffff;
   border-left: 2px solid #ffffff; }
   .sidebar.affix-top {
@@ -563,16 +569,16 @@ input.upload {
     max-height: 1080px; }
 
 .custom {
-  width: 1104px;
-  height: 848px;
+  width: 592px;
+  height: 464px;
   border-width: 40px;
   box-sizing: content-box; }
   .custom .device-screen {
-    width: 1024px;
-    height: 768px;
-    max-height: 768px; }
+    width: 512px;
+    height: 384px;
+    max-height: 384px; }
   .custom .overflow {
-    height: 768px;
-    max-height: 768px; }
+    height: 384px;
+    max-height: 384px; }
 
 /*# sourceMappingURL=style.css.map */
