--- a/scss/_sidebar.scss
+++ b/scss/_sidebar.scss
@@ -3,11 +3,11 @@
 .sidebar {
   position: absolute;
   top: 78px;
-  height: calc(100% - 83px);
+  height: calc(100vh - 78px);
   width: 250px;
   right: 0;
   padding: 0 20px;
-  overflow-y: scroll;
+  overflow: scroll;
   background-color: $white;
   border-left: 2px solid $white;
 
@@ -27,9 +27,8 @@
 
 // Upload button
 .upload-button {
-    position: relative;
-    overflow: hidden;
-
+  position: relative;
+  overflow: hidden;
 }
 
 input.upload {
