--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,8 @@ hr.thick {
 
 h1 small, h2 small, h3 small, h4 small, h5 small, h6 small {
   color: #767676; }
+h1 a small, h2 a small, h3 a small, h4 a small, h5 a small, h6 a small {
+  color: white; }
 
 .sitback-header {
   position: fixed;
@@ -281,7 +283,8 @@ input.upload {
   border-radius: 60px;
   background-color: #444444;
   border: 1px solid #333333;
-  box-shadow: 0 0 0 4px #b0b0b0; }
+  box-shadow: 0 0 0 4px #b0b0b0;
+  transform-origin: center top; }
 
 .image-background {
   background-position: center center;
