--- a/scss/_devices.scss
+++ b/scss/_devices.scss
@@ -14,6 +14,7 @@
   border: 1px solid $mine-shaft;
   box-shadow: 0 0 0 4px $silver-chalice;
   // transition: .4s all ease-in-out;
+  transform-origin: center top;
 }
 
 .image-background {
