--- a/scss/components/_nav.scss
+++ b/scss/components/_nav.scss
@@ -120,7 +120,7 @@
     color: $black-50;
 
     @media (min-width: $screen-sm) {
-      padding: 5px 5px;
+//      padding: 5px 5px;
     }
   }
 }
