--- a/css/style.css
+++ b/css/style.css
@@ -572,16 +572,18 @@ input.upload {
     max-height: 1080px; }
 
 .custom {
-  width: 592px;
-  height: 464px;
+  min-width: calc(200px + 80px);
+  min-height: calc(300px + 80px);
   border-width: 40px;
   box-sizing: content-box; }
   .custom .device-screen {
-    width: 512px;
-    height: 384px;
-    max-height: 384px; }
+    width: 100%;
+    height: 100%;
+    min-width: 200px;
+    min-height: 300px; }
   .custom .overflow {
-    height: 384px;
-    max-height: 384px; }
+    height: 100%;
+    min-width: 200px;
+    min-height: 300px; }
 
 /*# sourceMappingURL=style.css.map */
