--- a/scss/devices/_custom.scss
+++ b/scss/devices/_custom.scss
@@ -1,12 +1,13 @@
 // Custom
 
-$custom-width: 512px;
-$custom-height: 384px;
-
+$custom-width: 100%;
+$custom-height: 100%;
+$custom-min-height: 300px;
+$custom-min-width: 200px;
 
 .custom {
-  width: $custom-width + 80px; // 1024px + left and right border width
-  height: $custom-height + 80px; // 768px + top and bottom border width
+  min-width: calc(#{$custom-min-width} + 80px);
+  min-height: calc(#{$custom-min-height} + 80px);
   border-width: 40px;
   box-sizing: content-box;
   // place borders on outside so custom dimension inline styles interferring
@@ -14,11 +15,13 @@ $custom-height: 384px;
   .device-screen {
     width: $custom-width;
     height: $custom-height;
-    max-height: $custom-height;
+    min-width: $custom-min-width;
+    min-height: $custom-min-height;
   }
 
   .overflow {
     height: $custom-height;
-    max-height: $custom-height;
+    min-width: $custom-min-width;
+    min-height: $custom-min-height;
   }
 }
