--- a/scss/_sidebar.scss
+++ b/scss/_sidebar.scss
@@ -5,7 +5,7 @@
   top: 78px;
   height: calc(100vh - 78px);
   width: 250px;
-  right: 0;
+  left: 0;
   padding: 0 20px;
   overflow: scroll;
   background-color: $white;
