--- a/css/app.css
+++ b/css/app.css
@@ -10891,6 +10891,9 @@ abbr[title] {
       padding-bottom: 20px;
       max-height: 400px; }
 
+.content-wrapper .panel:first-child {
+  border-top: 0; }
+
 .hs-form-field,
 .hs_submit {
   font-size: inherit; }
@@ -11940,7 +11943,7 @@ h1 a small, h2 a small, h3 a small, h4 a small, h5 a small, h6 a small {
 
 .sidebar {
   position: absolute;
-  top: 78px;
+  top: 70px;
   height: calc(100vh - 78px);
   width: 250px;
   left: 0;
